objects/Data_Staging_Table__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Close_Date__c</fullName>
        <label>Anticipated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Buying_Group__c</fullName>
        <description>This hold the info on Belongs to from the Prospect -  This will be form the Prospect upload template OD</description>
        <label>Belongs To</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>This hold the Tile of the Primary Contact from the Officedepot Prospect creation Template</description>
        <label>Contact Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>This holds the County Filed form the Prospect  and the data will be feed by the Template Prospect upload</description>
        <label>Country</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Lifecycle__c</fullName>
        <label>Customer Lifecycle</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_OD_SIC_Rep__c</fullName>
        <description>This hold the Info of Industry - Rep on the Prospect page  and this will be feed by the Prospect Upload form - OD</description>
        <label>Industry</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OMX_Primary_Key__c</fullName>
        <label>OMX Primary Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OMX_Rep_Number__c</fullName>
        <label>OMX Rep #</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1%-Qualifying Prospect</fullName>
                </value>
                <value>
                    <fullName>10%-Appointment Secured</fullName>
                </value>
                <value>
                    <fullName>25%-Initial Approach</fullName>
                </value>
                <value>
                    <fullName>50%-Presentation</fullName>
                </value>
                <value>
                    <fullName>75%-Negotiate &amp; Finalize</fullName>
                </value>
                <value>
                    <fullName>90%-Execute</fullName>
                </value>
                <value>
                    <fullName>100%-Won</fullName>
                </value>
                <value>
                    <fullName>0%-Lost</fullName>
                </value>
                <value>
                    <fullName>0%-Walkaway</fullName>
                </value>
                <value>
                    <fullName>0%-Duplicate/Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_template_cd__c</fullName>
        <description>This holds the data for the Pricing Template on the Prospect and will be feed by the Prospect upload template OD</description>
        <label>Pricing Template</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <label>Primary Competitor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <label>Primary Product</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProspectID__c</fullName>
        <description>This hold the Created Prospect ID for Reference</description>
        <label>ProspectID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepID__c</fullName>
        <description>This hold the SalesRep ID from the Prospect upload template - OfficeDepot ex: IS20116</description>
        <label>SalesRepID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <description>This holds the Sector Info of the OD Prospect from the Upload Prospect template</description>
        <label>Sector</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>This hold the Information of the Prospect Segment  from the OD Prospect Upload template</description>
        <label>Segment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WCW_Count__c</fullName>
        <label>WCW Count</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <label>Data Staging Table</label>
    <nameField>
        <label>Data Staging Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Staging Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>